# PRayGroundApps

./: README.md
cornel/: CMakeLists.txt  app.cpp  app.h  kernels.cu  main.cpp
glass/: CMakeLists.txt  app.cpp  app.h  kernels.cu  params.h
